# flask_url_shortener

./: Makefile  README.md  pyproject.toml
flask_url_shortener/: app.py  db.sqlite3  helpers.py  test.py
flask_url_shortener/static/: API.md
flask_url_shortener/templates/: dashboard.html  index.html  layout.html
tests/: test.py
