[tool.poetry]
name = "flask-url-shortener"
version = "0.1.0"
description = ""
authors = ["Luiz Paulo Coutinho <coutinholps@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_url_shortener"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
sqlalchemy = "^2.0.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
